<b><u> v3.01, 19.06.2017</b></u>
<font color=#FF8C00>&#9830;</font> Fix an error in the Orderhall skin. Update the Chromie Talent skin. Thx Simpy <3
<font color=#FF8C00>&#9830;</font> Fix an error in the PvP skin that the tooltips won't show.
<font color=#FF8C00>&#9830;</font> Update a lot of skins.
<font color=#FF8C00>&#9830;</font> Create an option to disable the decorative Stripes.
<font color=#FF8C00>&#9830;</font> Add own detached portraits for Player/Target. The options are disabled if BenikUI is loaded. -- Credits Benik
<font color=#FF8C00>&#9830;</font> Add own options for transparent Actionbar Backdrop. The options are disabled if BenikUI is loaded. -- Credits Benik

<b><u> v3.00, 12.06.2017</b></u>
<font color=#FF8C00>&#9830;</font> !! PLEASE DO A FRESH INSTALL !!
<font color=#FF8C00>&#9830;</font> Add a skin for Premade Group Filter
<font color=#FF8C00>&#9830;</font> Updated and edit a lot of skins
<font color=#FF8C00>&#9830;</font> Remove some code to position the AlwaysUpFrame
<font color=#FF8C00>&#9830;</font> Update BigWigs skin (now half-bar)
<font color=#FF8C00>&#9830;</font> Hide the Notifications if you are in combat
<font color=#FF8C00>&#9830;</font> Use the new method from ElvUI to register modules
<font color=#FF8C00>&#9830;</font> Add bindings for the RaidMarkBar
<font color=#FF8C00>&#9830;</font> The tabs from ElvUI are now transparent
<font color=#FF8C00>&#9830;</font> Fix a rar nil error in CoolDownFlash with Dual Profiles enabled
<font color=#FF8C00>&#9830;</font> Update profile creation for the AddOns. It now uses char specific profiles

<b><u> v2.36, 03.05.2017</b></u>
<font color=#FF8C00>&#9830;</font> Changed the main texture to muiBlank
<font color=#FF8C00>&#9830;</font> Update TradeSkillTabs.
<font color=#FF8C00>&#9830;</font> Update XIV_Databar profile & skin.
<font color=#FF8C00>&#9830;</font> Update AddOnSkins profile.
<font color=#FF8C00>&#9830;</font> Overhaul the options a bit.